# cebrameta

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
avatar_pipeline/: __init__.py  audio.py  cli.py  config.py  lipsync.py  pipeline.py  utils.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/services/: pipeline.py
backend/app/stubs/: __init__.py  fastapi.py
backend/tests/: test_api.py  test_pipeline.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/src/components/: Preview.jsx
tests/: test_config.py
